[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Levels/Level_1.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
level_list = [ ExtResource( 2 ), ExtResource( 2 ) ]

[node name="LevelContainer" type="Node" parent="."]

[node name="MainMenu" type="Node2D" parent="."]
